# lexicom_test

./: README.md  docker-compose.yml  main.py  pyproject.toml
.deploy/: Dockerfile
misc/: config.py  error_handlers.py  redis.py
service/: main.py  models.py  state.py
service/depends/: cache.py
service/routes/: __init__.py  addresses.py
settings/: config.json
