[tool.poetry]
name = "lexicom-test"
version = "0.1.0"
description = ""
authors = ["Павел Крикуненко <pavelkrikunenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
